syntax = "proto3";  
  
package protoActiveMq;

option java_package = "com.hzmc.common.protobuf";
option java_outer_classname = "ProtoActiveMQ";

enum MsgCmdType
{
	RESERVED = 0;					//占位符(不用)
	CAPAALogOn = 1;				    //登录
	CAPAALogOff = 2;			    //登出
	CAPAAAccess = 3;			    //访问审计
	CAPAAAccessResult = 4;		    //访问结果(返回行)
	CAPAAKeepAlive = 5;			    //当前活跃连接
	CAPAALinkInfo = 6;  		    //四层协议信息
	CAPAAFlowInfo = 7; 			    //流量信息
	CAPAAIPWHITELIST = 8;           //IP白名单类型
	CAPAASQLWHITELIST = 9;          //SQL白名单类型
}

enum DataSrcType
{
	DATASRC_RESERVED = 0;           //占位符(不用)
	DATASRC_DBPROBE = 1;	     	//探针
	DATASRC_SWITCH_MIRROR = 2;   	//网络镜像
	DATASRC_DBFW = 3;   			//DBFW
}

enum SqlParserType
{
	SQL_RESERVED = 0;               //占位符(不用)
	SQL_PROTOCOL_PARSER = 1;		//sql协议解析
	SQL_REGEX = 2;					//正则匹配
}


enum DBStatusType
{
	DB_STUDY = 0;					//学习
	DB_ACTIVE = 1;					//激活
	DB_SIMULATE = 2;				//模拟
	DB_NOT_ACTIVE = 3;				//不激活
}


message BaseMessage
{
	fixed32 cmdLen = 1;				//数据长度
	MsgCmdType cmdType = 2;			//数据类型
}

//此包发送规则：
//如果有登录包，在登录包发送之前，如果没有登录包，在第一个sql发送之前
message CapaaLinkInfo
{
	fixed32 cmdLen = 1;             //消息长度(下同)
	MsgCmdType cmdType = 2;         //消息类型(下同)
	bytes sessionId = 3;           //根据时间戳生成的ID
	bytes srcIp = 4;               //源IP
	uint32 srcPort = 5;             //源端口
	bytes srcMac = 6;              //源Mac地址
	bytes dstIp = 7;               //目地IP
	uint32 dstPort = 8;             //目地端口
	bytes dstMac = 9;              //目地Mac地址
	DataSrcType dataSrc = 10;       //同CapaaAccess数据来源
}

message CapaaLogOn
{
	fixed32 cmdLen = 1;             //
	MsgCmdType cmdType = 2;         //
	bytes sessionId = 3;           //根据时间戳生成的ID
	bytes certSessionId = 4;       //使用证书时的证书SID
	bytes ruleName = 5;            //规则名字,not_match
	bytes eUserId = 6;             //企业用户ID
	bytes eUser = 7;               //企业用户名
	bytes dbUser = 8;              //数据库用户
	bytes ipAddr = 9;              //客户端IP
	bytes endHost = 10;            //终端域名
	bytes endMac = 11;             //终端mac
	bytes endIP = 12;              //终端IP
	bytes osUser =13;              //操作系统用户
	bytes appName =14;             //应用名
	bytes endApp =15;              //终端应用
	uint64 logonTime =16;           //登录时间
	uint64 logoffTime = 17;         //登出时间
	bytes strCmdType = 18;         //操作类型
	bytes what = 19;               //自定义信息(登录一般填“NEW SESSION”)
	bytes serverHost = 20;         //数据库所在主机的主机名
	bytes capaaDisplayName = 21;   //注册时填的注册名
	bytes instanceName = 22;       //数据库SID
	uint32 actionLevel = 23;        //响应等级
	uint32 auditLevel = 24;         //审计级别，防火墙中的风险等级
	bytes sid = 25;                //实例名(库名)
	bytes serial = 26;             //
	bytes audSid = 27;             //
	bytes hostMac = 28;            //客户端所在主机mac地址
	bytes svrIp = 29;              //数据库IP
	uint32 svrPort = 30;            //数据库端口
	bytes charset = 31;            //数据库字符集
	uint32 clientPort = 32;         //客户端端口
	bytes clientHost = 33;         //客户端主机名
	bool logonStatus = 34;          //登录状态，成功/失败
	DBStatusType dbStatus = 35;		//当前数据库状态
	uint32 dataType= 36;            //数据类型
}

message CapaaLogOff
{
	fixed32 cmdLen = 1;             //
	MsgCmdType cmdType = 2;         //
	bytes sessionId = 3;           //根据时间戳生成的ID
	bytes strCmdType = 4;          //操作类型
	uint64 logOffTime = 5;          //登出时间
}

message CapaaAccess
{
	fixed32 cmdLen = 1;             //
	MsgCmdType cmdType = 2;         //
	bytes accessID = 3;            //根据时间戳生成的ID
	bytes sessionID = 4;           //连接对应的ID
	bytes appUser = 5;             //应用用户
	bytes eUserID = 6;             //企业用户ID
	bytes eUser = 7;               //企业用户名
	bytes sessionInfo = 8;         //0000
	bytes endIP = 9;               //终端IP
	bytes ruleName = 10;           //与登录规则名称相类似
	uint64 opTime = 11;             //访问时间
	bytes strCmdType = 12;         //操作类型
	bytes objectOwner = 13;         //访问的所有者
	bytes objectName = 14;          //访问对象名(如 表名)
	bytes objectType = 15;         //访问对象类型
	uint32 actionLevel = 16;        //响应行为
	uint32 auditLevel = 17;         //风险等级
	bytes txID = 18;               //
	bytes scn = 19;                //
	bytes cscn = 20;               //
	repeated bytes bindValue = 21;  //绑定变量
	bytes srcMac = 22;             //源Mac地址
	bytes sqlText = 23;             //SQL语句
	DataSrcType dataSrc = 24;       //数据来源
	bytes cliIp = 25;	            //客户端IP
	uint32 cliPort = 26;            //客户端端口
	bytes svrIp = 27;              //数据库IP
	uint32 svrPort = 28;            //数据库端口
	SqlParserType sqlParserType = 29;//sql解析类型
	bytes originalSqlText = 30;     //原始SQL语句
	uint32 rule_id = 31;            //命中的风险引擎规则ID
	repeated bytes highRiskSqls = 32;//命中的高危sql语句集
	bytes DBsid = 33;              //数据库SID
	bytes appName = 34;            //应用名
	DBStatusType dbStatus = 35;		//当前数据库状态
	uint32 dataType= 36;            //数据类型
}

/* IP白名单消息类型 */
message CapaaIpWhiteList
{
	fixed32 cmdLen = 1;             //
	MsgCmdType cmdType = 2;         //
	bytes accessID = 3;            //根据时间戳生成的ID
	bytes sessionID = 4;           //连接对应的ID
	bytes appUser = 5;             //应用用户
	bytes eUserID = 6;             //企业用户ID
	bytes eUser = 7;               //企业用户名
	bytes sessionInfo = 8;         //0000
	bytes endIP = 9;               //终端IP
	bytes ruleName = 10;           //与登录规则名称相类似
	uint64 opTime = 11;             //访问时间
	uint32 actionLevel = 12;        //响应行为
	uint32 auditLevel = 13;         //风险等级
	bytes srcMac = 14;             //源Mac地址
	bytes cliIp = 15;	            //客户端IP
	uint32 cliPort = 16;            //客户端端口
	bytes svrIp = 17;              //数据库IP
	uint32 svrPort = 18;            //数据库端口
	bytes webDBID = 19;            //对应web配置的数据ID
}

/* SQL白名单消息类型 */
message CapaaSQLWhiteList
{
	fixed32 cmdLen = 1;             //
	MsgCmdType cmdType = 2;         //
	bytes accessID = 3;            //根据时间戳生成的ID
	bytes sessionID = 4;           //连接对应的ID
	bytes appUser = 5;             //应用用户
	bytes eUserID = 6;             //企业用户ID
	bytes eUser = 7;               //企业用户名
	bytes sessionInfo = 8;         //0000
	bytes endIP = 9;               //终端IP
	bytes ruleName = 10;           //与登录规则名称相类似
	uint64 opTime = 11;             //访问时间
	uint32 actionLevel = 12;        //响应行为
	uint32 auditLevel = 13;         //风险等级
	bytes srcMac = 14;             //源Mac地址
	bytes cliIp = 15;	            //客户端IP
	uint32 cliPort = 16;            //客户端端口
	bytes svrIp = 17;              //数据库IP
	uint32 svrPort = 18;            //数据库端口
	bytes strCmdType = 19;         //操作类型
	repeated bytes bindValue = 20;  //绑定变量
	bytes sqlText = 21;             //SQL语句
	bytes originalSqlText = 22;     //原始SQL语句
	SqlParserType sqlParserType = 23;//sql解析类型
	bytes rule_id = 24;            //命中的风险引擎规则ID
	repeated bytes highRiskSqls = 25;//命中的高危sql语句集
	bytes webDBID = 26;            //对应web配置的数据ID
	bytes appName = 27;            //应用名
}

message CapaaAccessResult   
{
	fixed32 cmdLen = 1;             //
	MsgCmdType cmdType = 2;         //
	bytes accessId = 3;            //根据时间戳生成的ID
	bytes strCmdType = 4;          //操作类型
	sint32 errCode = 5;             //数据返回的错误码
	uint32 rowCount = 6;            //返回行数
	uint64 runTime = 7;             //2017.10.31修改,由原来的毫秒值精确到微秒值,由原来的32位改为64位
}

//流量信息上报-审计探针专用
message SingleFlowInfo
{
	bytes uuid = 1;                //
	uint64 flowSize = 2;            //
	repeated bytes dbName = 3;     //
}

//流量信息上报-审计探针专用
message CapaaFlowInfo
{
	fixed32 cmdLen = 1;             //
	MsgCmdType cmdType = 2;         //
	repeated SingleFlowInfo singleFlowInfo = 3;//
}

//当前活跃连接上报信息
message CapaaKeepAlive
{
	fixed32 cmdLen = 1;             //
	MsgCmdType cmdType = 2;         //
	bytes sessionId = 3;           //sessionId
	bytes strCmdType = 4;          //
}


//序列化前可调用ByteSizeLong()获取序列化后长度
//调用memcpy获取头8个字节获取头是错误的

//解析成功标志：
//ParseFrombytes()返回值为true,接收数据不完整时会返回false
//ByteSizeLong()返回值与cmdLen值一致
